tests/behavior/success/hello_world.bz
// Hello world!
import std::format;

function main()
{
	std::print("Hello world!\n");
}
