tests/behavior/error/panic1.bz
function main()
{
	__builtin_panic("error");
}
